feat(ever-admin): add translate setup manufacturing info EV-1198

--- a/admin/website-angular/src/assets/i18n/bg.json
+++ b/admin/website-angular/src/assets/i18n/bg.json
@@ -254,6 +254,10 @@
 			},
 			"LOCATION": {
 				"LOCATION": "Место нахождения"
+			},
+			"MANUFACTURING": {
+				"MANUFACTURING": "Производство",
+				"PRODUCTS_MANUFACTURING": "Продукти Производство"
 			}
 		}
 	},
