--- a/admin/website-angular/src/assets/i18n/en.json
+++ b/admin/website-angular/src/assets/i18n/en.json
@@ -253,6 +253,10 @@
 			},
 			"LOCATION": {
 				"LOCATION": "Location"
+			},
+			"MANUFACTURING": {
+				"MANUFACTURING": "Manufacturing",
+				"PRODUCTS_MANUFACTURING": "Products Manufacturing"
 			}
 		}
 	},
