--- a/admin/website-angular/src/assets/i18n/he.json
+++ b/admin/website-angular/src/assets/i18n/he.json
@@ -253,6 +253,10 @@
 			},
 			"LOCATION": {
 				"LOCATION": "מקום"
+			},
+			"MANUFACTURING": {
+				"MANUFACTURING": "ייצור",
+				"PRODUCTS_MANUFACTURING": "ייצור מוצרים"
 			}
 		}
 	},
