--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -253,6 +253,10 @@
 			},
 			"LOCATION": {
 				"LOCATION": "Место нахождения"
+			},
+			"MANUFACTURING": {
+				"MANUFACTURING": "Производство",
+				"PRODUCTS_MANUFACTURING": "Производство продукции"
 			}
 		}
 	},
