--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -211,6 +211,9 @@
 			"SETUP_MERCHANTS": "Настройки ресторана",
 			"PREV": "НАЗАД",
 			"NEXT": "СЛЕДУЮЩИЙ",
+			"ADD": "Добавлять",
+			"BACK": "Назад",
+			"SAVE": "Сохранить",
 			"ACCOUNT": {
 				"ACCOUNT": "Учетная запись",
 				"EMAIL_ADDRESS": "Адрес электронной почты",
@@ -253,6 +256,10 @@
 			},
 			"LOCATION": {
 				"LOCATION": "Место нахождения"
+			},
+			"PAYMENTS": {
+				"PAYMENTS": "Плащания",
+				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?"
 			},
 			"MANUFACTURING": {
 				"MANUFACTURING": "Производство",
