--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -264,6 +264,17 @@
 			"MANUFACTURING": {
 				"MANUFACTURING": "Производство",
 				"PRODUCTS_MANUFACTURING": "Производство продукции"
+			},
+			"DELIVERY_AND_TAKEAWAY_SETTINGS": {
+				"DELIVERY_AND_TAKEAWAY_SETTINGS": "Настройки доставки и выноса",
+				"SELECT_FROM_SHARED_CARRIERS": "Выберите из общих перевозчиков",
+				"ADD_YOUR_CARRIER": "Добавьте ваш оператор",
+				"EDIT_CARRIER": "Редактировать перевозчик",
+				"CARRIER_REQUIRED": "Требуется перевозчик",
+				"PRODUCTS_DELIVERY_BY_DEFAULT": "Доставка продуктов (по умолчанию)",
+				"PRODUCTS_TAKEAWAY_BY_DEFAULT": "Продукты на вынос (по умолчанию)",
+				"USE_SELECTED_SHARED_CARRIERS": "Использовать выбранные общие носители",
+				"ADD_YOUR_CARRIERS": "Добавьте своих перевозчиков"
 			}
 		}
 	},
