feat(ever-admin): add translate on setup delivery info EV-1198

--- a/admin/website-angular/src/assets/i18n/bg.json
+++ b/admin/website-angular/src/assets/i18n/bg.json
@@ -772,6 +772,7 @@
 			"CLIENT_REFUSE_ORDER": "Поръчка отказана от клиента",
 			"AVAIBLE_ORDER_TO_PICK_UP": "Налични поръчки за набиране (всеки превозвач може да вземе няколко поръчки)",
 			"ACTIVE": "Активен",
+			"CARRIER_CAN_BE_SHARED": "Превозвачът може да бъде споделен?",
 			"NOT_ACTIVE": "Неактивен",
 			"WORKING": "Работещ",
 			"NOT_WORKING": "Не работещ",
