--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -768,6 +768,7 @@
 			"CLIENT_REFUSE_ORDER": "Заказ клиента",
 			"AVAIBLE_ORDER_TO_PICK_UP": "Доступные заказы для подбора (каждый перевозчик может выбрать несколько заказов)",
 			"ACTIVE": "Активный",
+			"CARRIER_CAN_BE_SHARED": "Перевозчик может быть общим?",
 			"NOT_ACTIVE": "Не активен",
 			"WORKING": "За работой",
 			"NOT_WORKING": "Не работает",
