--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -279,6 +279,10 @@
 			"ORDERS_SETTINGS": {
 				"ORDERS_SETTINGS": "Настройки заказов",
 				"ORDER_BARCODE_QR_CODE_TYPES": "Укажите тип штрих-кода / QR-код"
+			},
+			"PRODUCT_CATEGORIES": {
+				"PRODUCT_CATEGORIES": "Категории продукта",
+				"ADD_OWN_PRODUCT_CATEGORY": "Добавить собственную категорию продукта"
 			}
 		}
 	},
