feat(ever-admin): add translate to how to set up container EV-1198

--- a/admin/website-angular/src/assets/i18n/bg.json
+++ b/admin/website-angular/src/assets/i18n/bg.json
@@ -217,6 +217,9 @@
 			"SAVE": "Запази",
 			"SELECT": "Select",
 			"CREATE": "Create",
+			"HOW_TO_SET_UP": {
+				"HOW_TO_SET_UP": "Как да настроите"
+			},
 			"STEPPER": {
 				"ACCOUNT": "Акаунт",
 				"BASIC_INFO": "Основна информация",
